# Photo-go

./: .gitignore  Dockerfile.api  Dockerfile.transcode  Makefile  README.md  docker-compose.yml  env.example  go.mod  go.sum  install.sh  lint.sh  run.sh  run_test.sh
cmd/: main.go
cmd/api-server/: main.go
cmd/migrate/: main.go
config/: settings.go
config/env/: secret_base64.go
docs/: API.md
internal/: constant.go
internal/api/: route.go  routes.go
internal/api/v1/: media_handler.go  media_repository.go  media_schema.go  media_service.go
internal/core/: image.go  video.go
internal/database/: database.go  media_repository.go  migration.go  model.go
internal/middleware/: middleware.go
internal/models/: media.go  photo.go  user.go
internal/service/: media_service.go
pkg/logger/: logger.go  logger_test.go
pkg/transcode/: Cargo.toml  README.md
pkg/transcode/src/: ai.rs  filters.rs  handlers.rs  main.rs  services.rs
pkg/types/: media.go
pkg/utils/: minio.go
scripts/: dev.sh  test_api.sh
ui/: demo.html
